# tips_lab

./: CMakeLists.txt  Noise.cpp  Noise.h  main.cpp  source.txt
huffman/: ChannelEncoder.cpp  ChannelEncoder.h  Decoder.cpp  Decoder.h  HuffmanTree.cpp  HuffmanTree.h  HuffmanTreeNode.cpp  HuffmanTreeNode.h
matrix/: Matrix.cpp  Matrix.h
system/: AntiJammingDecoder.cpp  AntiJammingDecoder.h  AntiJammingEncoder.cpp  AntiJammingEncoder.h  Channel.cpp  Channel.h  Reciever.cpp  Reciever.h  Source.cpp  Source.h  StatsCounter.cpp  StatsCounter.h
